standardize column name + clean up stg_new_events

--- a/models/00_staging/sources.yml
+++ b/models/00_staging/sources.yml
@@ -67,7 +67,7 @@ sources:
               - relationships:
                   to: source('raw', 'post')
                   field: post_id
-          - name: event_ts
+          - name: created_at
             tests:
               - not_null
           - name: event_type
