--- a/models/00_staging/sources.yml
+++ b/models/00_staging/sources.yml
@@ -9,69 +9,69 @@ sources:
         columns:
           - name: user_id
             description: Primary key for users
-            tests:
+            data_tests:
               - unique
               - not_null
           - name: first_name
-            tests:
+            data_tests:
               - not_null
           - name: last_name
-            tests:
+            data_tests:
               - not_null
           - name: created_at
-            tests:
+            data_tests:
               - not_null
           - name: country_code
-            tests:
+            data_tests:
               - not_null
 
       - name: post
         columns:
           - name: post_id
             description: Primary key for posts
-            tests:
+            data_tests:
               - unique
               - not_null
           - name: user_id
             description: Foreign key to users table
-            tests:
+            data_tests:
               - not_null
               - relationships:
                   to: source('raw', 'user')
                   field: user_id
           - name: post_text
-            tests:
+            data_tests:
               - not_null
           - name: created_at
-            tests:
+            data_tests:
               - not_null
 
       - name: event
         columns:
           - name: event_id
             description: Primary key for events
-            tests:
+            data_tests:
               - unique
               - not_null
           - name: user_id
             description: Foreign key to users table
-            tests:
+            data_tests:
               - not_null
               - relationships:
                   to: source('raw', 'user')
                   field: user_id
           - name: post_id
             description: Foreign key to posts table
-            tests:
+            data_tests:
               - not_null
               - relationships:
                   to: source('raw', 'post')
                   field: post_id
           - name: created_at
-            tests:
+            data_tests:
               - not_null
           - name: event_type
-            tests:
+            data_tests:
               - not_null
               - accepted_values:
                   values: ['view', 'like']
