--- a/models/01_staging/snapshots.yml
+++ b/models/01_staging/snapshots.yml
@@ -1,6 +1,5 @@
 snapshots:
-  - name: raw__post_snapshot
-    description: "Type 2 SCD of the raw.user table"
+  - name: raw__user_snapshots
     relation: source('raw', 'user')
     config:
       target_schema: snapshots
@@ -8,8 +7,7 @@ snapshots:
       unique_key: user_id
       updated_at: updated_at
 
-  - name: raw__post_snapshot
-    description: "Type 2 SCD of the raw.post table"
+  - name: raw__post_snapshots
     relation: source('raw', 'post')
     config:
       target_schema: snapshots
