--- a/models/01_staging/snapshots.yml
+++ b/models/01_staging/snapshots.yml
@@ -6,7 +6,7 @@ snapshots:
       strategy: timestamp
       unique_key: user_id
       updated_at: updated_at
-      dbt_valid_to_current: "TIMESTAMP '9999-12-31 00:00:00'"
+      dbt_valid_to_current: "{{ var('snapshot_end_timestamp') }}"
 
   - name: raw__post_snapshots
     relation: source('raw', 'post')
@@ -15,4 +15,4 @@ snapshots:
       strategy: timestamp
       unique_key: post_id
       updated_at: updated_at
-      dbt_valid_to_current:  "TIMESTAMP '9999-12-31 00:00:00'"
+      dbt_valid_to_current: "{{ var('snapshot_end_timestamp') }}"
