--- a/models/03_analytics/snapshots.yml
+++ b/models/03_analytics/snapshots.yml
@@ -6,7 +6,7 @@ snapshots:
       strategy: timestamp
       unique_key: user_id
       updated_at: updated_at
-      dbt_valid_to_current: "TIMESTAMP '9999-12-31 00:00:00'"
+      dbt_valid_to_current: "{{ var('snapshot_end_timestamp') }}"
       hard_deletes: new_record
 
   - name: dim_posts_snapshots
@@ -16,5 +16,5 @@ snapshots:
       strategy: timestamp
       unique_key: post_id
       updated_at: updated_at
-      dbt_valid_to_current: "TIMESTAMP '9999-12-31 00:00:00'"
+      dbt_valid_to_current: "{{ var('snapshot_end_timestamp') }}"
       hard_deletes: new_record
