--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,7 +5,7 @@ config-version: 2
 profile: 'event_stream_demo'
 
 model-paths: ['models']
-analysis-paths: ['analysis']
+analysis-paths: ['analyses']
 test-paths: ['tests']
 target-path: 'target'
 clean-targets:
